edited some padding and spacing issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -137,14 +137,16 @@ body{
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
+  border-radius: 130px;
+  border: 1px solid #313131;
 }
 /*-- MY PIC CSS END --*/
 
 /*-- ABOUT ME TEXTS START --*/
 .aboutMeP{
-  padding-left: 300px;
-  padding-right: 300px;
+  padding-left: 200px;
+  padding-right: 200px;
   text-align: center;
   padding-bottom: 20px;
 }
@@ -171,7 +173,7 @@ body{
 }
 
 .downloadLink{
-  padding-top: 50px;
+  padding: 50px;
   display: block;
   text-align: center;
   color: lightgrey !important;
